--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -229,7 +229,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Downloads/Levonin.exe"
+export_path="../Export/Levonin.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
